--- a/app/src/main/res/menu/options_post.xml
+++ b/app/src/main/res/menu/options_post.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/remove"
-        android:title="@string/remove_post_action" />
-    <item
-        android:id="@+id/edit"
-        android:title="@string/edit_post_action" />
-
+    <item android:id="@+id/edit" android:title="@string/menu_edit" />
+    <item android:id="@+id/remove" android:title="@string/menu_remove" />
 </menu>
